# Peine_Zarnama

./: README.md  pyproject.toml
bj_market/: .gitignore  requirements.txt  txt.txt
bj_market/apps/auths/: models.py  serializers.py  urls.py  views.py
bj_market/apps/chats/: consumers.py  models.py  routing.py  serializers.py
bj_market/apps/managements/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
bj_market/apps/profiles/: models.py  urls.py
bj_market/apps/tariffPayments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bj_market/deploy/: asgi.py
bj_market/settings/: base.py  config.py  urls.py
